// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NumberPagination /> check how renders should render all correctly (without hide-arrow class on arrows) 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ cvyney"
    data-testid="NumberPagination"
  >
    <a
      class="arrow"
      data-testid="NumberPagination-left-arrow"
    >
      <div
        class="sc-gsTCUz goBSlT"
        color=""
      >
        <svg>
          arrow.svg
        </svg>
      </div>
    </a>
    <a
      class="number-link"
      data-testid="NumberPagination-page1"
    >
      1
    </a>
    <a
      class="number-link active"
      data-testid="NumberPagination-page2"
    >
      2
    </a>
    <a
      class="number-link"
      data-testid="NumberPagination-page3"
    >
      3
    </a>
    <span
      class="of"
    >
      of
    </span>
    <span
      class="of"
    >
      3
    </span>
    <a
      class="arrow"
      data-testid="NumberPagination-right-arrow"
    >
      <div
        class="sc-gsTCUz cephmd"
        color=""
      >
        <svg>
          arrow.svg
        </svg>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`<NumberPagination /> check how renders should render ellipsis and six number links and page 8 has active class if p is 8, quantity is 20, per page is 2 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ cvyney"
    data-testid="NumberPagination"
  >
    <a
      class="arrow"
      data-testid="NumberPagination-left-arrow"
    >
      <div
        class="sc-gsTCUz goBSlT"
        color=""
      >
        <svg>
          arrow.svg
        </svg>
      </div>
    </a>
    <a
      class="number-link"
      data-testid="NumberPagination-page1"
    >
      1
    </a>
    <span
      class="ellipsis"
    >
      ...
    </span>
    <a
      class="number-link"
      data-testid="NumberPagination-page6"
    >
      6
    </a>
    <a
      class="number-link"
      data-testid="NumberPagination-page7"
    >
      7
    </a>
    <a
      class="number-link active"
      data-testid="NumberPagination-page8"
    >
      8
    </a>
    <a
      class="number-link"
      data-testid="NumberPagination-page9"
    >
      9
    </a>
    <a
      class="number-link"
      data-testid="NumberPagination-page10"
    >
      10
    </a>
    <span
      class="of"
    >
      of
    </span>
    <span
      class="of"
    >
      10
    </span>
    <a
      class="arrow"
      data-testid="NumberPagination-right-arrow"
    >
      <div
        class="sc-gsTCUz cephmd"
        color=""
      >
        <svg>
          arrow.svg
        </svg>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`<NumberPagination /> check how renders should render ellipsis and six number links and page 10 has active class if p is 10, quantity is 20, per page is 2 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ cvyney"
    data-testid="NumberPagination"
  >
    <a
      class="arrow"
      data-testid="NumberPagination-left-arrow"
    >
      <div
        class="sc-gsTCUz goBSlT"
        color=""
      >
        <svg>
          arrow.svg
        </svg>
      </div>
    </a>
    <a
      class="number-link"
      data-testid="NumberPagination-page1"
    >
      1
    </a>
    <span
      class="ellipsis"
    >
      ...
    </span>
    <a
      class="number-link"
      data-testid="NumberPagination-page6"
    >
      6
    </a>
    <a
      class="number-link"
      data-testid="NumberPagination-page7"
    >
      7
    </a>
    <a
      class="number-link"
      data-testid="NumberPagination-page8"
    >
      8
    </a>
    <a
      class="number-link"
      data-testid="NumberPagination-page9"
    >
      9
    </a>
    <a
      class="number-link active"
      data-testid="NumberPagination-page10"
    >
      10
    </a>
    <span
      class="of"
    >
      of
    </span>
    <span
      class="of"
    >
      10
    </span>
    <a
      class="arrow hide-arrow"
      data-testid="NumberPagination-right-arrow"
    >
      <div
        class="sc-gsTCUz cephmd"
        color=""
      >
        <svg>
          arrow.svg
        </svg>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`<NumberPagination /> check how renders should render six number links if p is 1 and page 1 has active class, quantity is 20, per page is 2 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ cvyney"
    data-testid="NumberPagination"
  >
    <a
      class="arrow hide-arrow"
      data-testid="NumberPagination-left-arrow"
    >
      <div
        class="sc-gsTCUz goBSlT"
        color=""
      >
        <svg>
          arrow.svg
        </svg>
      </div>
    </a>
    <a
      class="number-link active"
      data-testid="NumberPagination-page1"
    >
      1
    </a>
    <a
      class="number-link"
      data-testid="NumberPagination-page2"
    >
      2
    </a>
    <a
      class="number-link"
      data-testid="NumberPagination-page3"
    >
      3
    </a>
    <a
      class="number-link"
      data-testid="NumberPagination-page4"
    >
      4
    </a>
    <a
      class="number-link"
      data-testid="NumberPagination-page5"
    >
      5
    </a>
    <a
      class="number-link"
      data-testid="NumberPagination-page6"
    >
      6
    </a>
    <span
      class="of"
    >
      of
    </span>
    <span
      class="of"
    >
      10
    </span>
    <a
      class="arrow"
      data-testid="NumberPagination-right-arrow"
    >
      <div
        class="sc-gsTCUz cephmd"
        color=""
      >
        <svg>
          arrow.svg
        </svg>
      </div>
    </a>
  </div>
</DocumentFragment>
`;
